--- a/mywebapp/static/css/mystyle.css
+++ b/mywebapp/static/css/mystyle.css
@@ -1,3 +1,5 @@
+body{
+background:url("../image/background.png");}
 .align-self-center{
 margin-left: 190px;
 }
@@ -5,6 +7,7 @@ margin-left: 190px;
 border: 2px solid black;
 padding-top: 6px;
 padding-left: 20px;
+margin-top:15px;
 }
 .product{
 border: 2px solid black;
@@ -15,4 +18,13 @@ padding: 30px;
 text-align:center;
 display: block;
 width:100px;
+}
+.icon{
+margin:50px;
+text-align: center;
+}
+.fa-chevron-left, .fa-chevron-right{
+top:40%;
+position:absolute;
+left:20%;
 }
