--- a/mywebapp/template/index.html
+++ b/mywebapp/template/index.html
@@ -13,9 +13,9 @@
         <div class="p-2 bd-highlight logo"><img src="{% static 'image/logo.png'%}" width="120px" height="120px"></div>
         <div class="p-2 bd-highlight align-self-center"><h3>CONSULTADD PROJECT E-COMMERCE</h3></div>
         <div class="p-2 bd-highlight align-self-center">
-            <i class="fas fa-shopping-cart"></i>
-            <i class="fas fa-heart"></i>
-            <i class="far fa-user-circle"></i>
+            <i class="fas fa-shopping-cart" style="font-size: 20px"></i>
+            <i class="fas fa-heart" style="font-size: 20px"></i>
+            <i class="far fa-user-circle" style="font-size: 20px"></i>
         </div>
     </div>
 </div>
@@ -139,6 +139,67 @@
                  </div>
              </div>
          </div>
+    </div>
+</div>
+<div class="container head">
+    <div class="row">
+        <h5>Recently Searched Products</h5>
+    </div>
+    <div class="row">
+        <div class="col-md-1">
+            <i class="fas fa-chevron-left"></i>
+        </div>
+        <div class="col-md">
+            <div class="row">
+            <img src="{% static 'image/toy1.jpg'%}" width="200px" height="200px">
+            </div>
+            <div class="row">
+                <p><strike>$42</strike>&nbsp &nbsp$30.90</p>
+            </div>
+        </div>
+        <div class="col-md">
+            <div class="row">
+            <img src="{% static 'image/electronic1.jpg'%}" width="200px" height="200px">
+            </div>
+            <div class="row">
+                <p><strike>$42</strike>&nbsp &nbsp$30.90</p>
+            </div>
+        </div>
+         <div class="col-md">
+            <div class="row">
+            <img src="{% static 'image/electronic2.jpg'%}" width="200px" height="200px">
+            </div>
+            <div class="row">
+                <p><strike>$42</strike>&nbsp &nbsp$30.90</p>
+            </div>
+        </div>
+         <div class="col-md">
+            <div class="row">
+            <img src="{% static 'image/fashion1.jpg'%}" width="200px" height="200px">
+            </div>
+            <div class="row">
+                <p><strike>$42</strike>&nbsp &nbsp$30.90</p>
+            </div>
+        </div>
+        <div class="col-md-1">
+            <i class="fas fa-chevron-right"></i>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row icon">
+        <div class="col-md">
+            <i class="fab fa-facebook-f" style="font-size: 20px"></i>
+        </div>
+        <div class="col-md">
+            <i class="fab fa-instagram" style="font-size: 20px"></i>
+        </div>
+        <div class="col-md">
+            <i class="fab fa-twitter" style="font-size: 20px"></i>
+        </div>
+        <div class="col-md">
+            <i class="fab fa-google-plus-g" style="font-size: 20px"></i>
+        </div>
     </div>
 </div>
 </body>
